# tank_evironment

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  compare_agents.sh  dev_notes.txt  evaluate_agents.sh  extract_agents.sh  gpt_bindings_notes.txt  requirements.txt  setup.sh  todo
.devcontainer/: Dockerfile  devcontainer.json
analysis_data/: .gitignore  create_comp_matrix copy.py  create_comp_matrix.py  create_eval_matrix.py  create_matrix.py
data/: polygon.fs  polygon.vs
include/: categories.hpp  config.hpp  engine.h  engine.hpp  game.h  obstacle.hpp  registry.hpp  render.h  render.hpp  shader.h  tank.hpp
logs/tank_game_environment_v0_20250515-234037_0/: events.out.tfevents.1747352437.TOOTHLESS.748382.0
logs/tank_game_environment_v1_20250521-013453_0/: events.out.tfevents.1747791293.TOOTHLESS.145242.0
old/: binding.cpp  engine.c  engine.h
python/: binding_test.py  demo.py  eval_v2_base_vs.py  extract_tensorboard.py  test_binding.py  train.py  train_v0.py  train_v1.py  train_v1_base.py  train_v2.py
python/bindings/: demo_binding.py  test_binding.py
python/tank_game_agent/: README.md
python/tank_game_agent/analysis/: plot_actions.py  plot_latent.py  plot_observations.py
python/tank_game_agent/callback/: callback_hparam_recorder.py  callback_video_recorder.py
python/tank_game_agent/feature_extactor/: feature_extractor_frozen.py  feature_extractor_lidar.py  feature_extractor_wrapper.py  temporal_feature_extractor_lidar.py
python/tank_game_agent/policy/: policy.py
python/tank_game_agent/schedule/: schedule_cosine.py  schedule_exponential.py  schedule_learning_rate.py  schedule_linear.py
python/tank_game_agent/vec_env/: vec_env.py
python/tank_game_environment/: README.md  demo_environment.py  tank_game_environment_v0.py  tank_game_environment_v1.py  tank_game_environment_v2.py
python/tank_game_environment/agent/: __init__.py  agent_base.py  agent_random.py  agent_registry.py  agent_static.py
python/tank_game_environment/asset/Courier_Prime/: OFL.txt
python/tank_game_environment/demo/: demo_binding.py  demo_environment.py  demo_environment_agent.py  demo_environment_map.py
python/tank_game_environment/env/: tank_game_environment.py  tank_game_util.py
python/tank_game_environment/map/: __init__.py  map_base.py  map_definition.py  map_registry.py
python/tank_game_environment/map/maps/: boulder.py  grid_aligned.py  grid_staggered.py  quincunx.py  random.py  run_close.py  run_far.py  run_medium.py  wall_large.py  wall_medium.py  wall_small.py
python/tank_game_environment/test/: test_agent.py  test_binding.py  test_environment.py  test_wrapper.py
python/tank_game_environment/wrapper/: wrapper_agent.py  wrapper_agent_v1.py  wrapper_agent_v2.py  wrapper_observation.py
src/: binding.cpp  engine.c  engine.cpp  game.c  main.c  obstacle.cpp  render.c  render.cpp  shader.c  tank.cpp  test_GLFW3.c  test_draw.c  test_gl_tutorial.c
test/: test.c  test.cpp  test_categories.cpp  test_config.cpp  test_engine.cpp  test_gl_tutorial.c  test_registry.cpp  test_render.cpp  test_tank.cpp
